fix footer to be always at bottom of page, header is now stick on top, long text post can be expand and collapse

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -21,12 +27,16 @@
     margin-top: 50px;
 }
 
-.footer-padding {
-	padding-bottom: 60px;
+.btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+footer {
+    margin-top: auto;
 }
 
 .footer {
-	position: absolute;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
@@ -35,7 +45,8 @@
 }
 
 .footer p {
-	margin-top: 25px;
+    margin-top: 50px;
+	padding-top: 25px;
 	font-size: 12px;
     color: #fff;
 }
